# Changelog
All notable changes to this project will be documented in this file.

The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [2.6.2]
- Update to use latest version of requests, configparser and certifi

## [2.6.1]
- Update to make use of wheel distribution to get rid of pip setup.py error
- Update config.py to include coverage for python 3.10 testing

## [2.6.0]
- Update to make use of gunicorn 20.1.0 in circle ci tests
- Update config.py to include coverage for python 3.9 testing
- Update CHANGELOG with missing entries

## [2.5.8]
- Update requests dependency to latest version and remove requests toolbox which isn't used.

## [2.5.7]
- Update README with reference to hcli_core for huckle testing.

## [2.5.6]
- Fix package bug preventing huckle --version from working properly

## [2.5.5]
- Update config.yml to remove python 2.7 and 3.4

## [2.5.4]
- Add support for HTTPS and certifi package CA authority trust.
- Update test to run on local hcli service rather than against hcli.io

## [2.4.4]
- Fix to make use .bashrc for proper non-login terminal support under bash

## [2.4.3]
- Give help precedence over parameter navigation so that help can be easily available at all times

## [2.4.2]
- Give precedence to parameter navigation if present so that we can avoid double quoting param on the command line

## [2.3.2]
- Fix SIGPIPE signal that causes huckle to crash prematurely
- Update install instructions to remove Python's pip installation
- Update to handle removal of an already removed cli
- Update README links to hcli.io to http from https
- Fix bug that prevents post when there's no input stream to send to the server

## [2.3.1]
- Fix python 2 vs python 3 urllib quote defect

## [2.3.0]
- Add support for passing quoted HCLI parameters
- Update to requests 2.21.0
- Add very large stdin streaming support