@@ -5,7 +5,9 @@ The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1
 and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).
 
 ## [2.6.2]
-- Update to use latest version of requests, configparser and certifi
+- Update to use latest version of requests, configparser and certifi.
+- Update to use a more recent version of python orbs in circleci
+- Remove support for python 3.5 and 3.6.
 
 ## [2.6.1]
 - Update to make use of wheel distribution to get rid of pip setup.py error
